[WFLY-16066] Adapt the change to compile properly on SE 8