@@ -22,6 +22,8 @@
 
 package org.wildfly.extension.batch.jberet;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
 
 /**
@@ -36,11 +38,15 @@ enum Namespace {
     BATCH_3_0("urn:jboss:domain:batch-jberet:3.0"),
     ;
 
-    private static final Map<String, Namespace> MAP = Map.of(
-            BATCH_1_0.name, BATCH_1_0,
-            BATCH_2_0.name, BATCH_2_0,
-            BATCH_3_0.name, BATCH_3_0
-    );
+    private static final Map<String, Namespace> MAP ;
+
+    static {
+        Map<String, Namespace> map = new HashMap<>();
+        map.put(BATCH_1_0.name, BATCH_1_0);
+        map.put(BATCH_2_0.name, BATCH_2_0);
+        map.put(BATCH_3_0.name, BATCH_3_0);
+        MAP = Collections.unmodifiableMap(map);
+    }
 
     /**
      * The current namespace version.
